--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 services:
-  web:
-    build: .
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+  # The FastAPI Application Service
+  backend:
+    build: ./backend
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - ./app:/app
+      - ./backend/app:/app/app
     ports:
       - "8000:8000"
     env_file:
@@ -11,8 +12,9 @@ services:
     depends_on:
       - db
 
+  # The PostgreSQL Database Service
   db:
-    image: postgres:15
+    image: postgres:15-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
