--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,32 @@ services:
       - .env
     depends_on:
       - db
+      - minio
+
+  minio:
+    image: minio/minio:RELEASE.2023-09-07T02-05-02Z
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    env_file:
+      - .env
+    volumes:
+      - minio_data:/data
+
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add myminio http://minio:9000 $$MINIO_ROOT_USER $$MINIO_ROOT_PASSWORD;
+      /usr/bin/mc mb myminio/$$MINIO_BUCKET_NAME --ignore-existing;
+      /usr/bin/mc policy set public myminio/$$MINIO_BUCKET_NAME;
+      exit 0;
+      "
+    env_file:
+      - .env
 
   # The PostgreSQL Database Service
   db:
@@ -24,3 +50,4 @@ services:
 
 volumes:
   postgres_data:
+  minio_data:
